# meeting-review

./: .env.example  .gitignore  .uvrc  LIVE_MODE_GUIDE.md  QUICKSTART.md  README.md  UV_SETUP.md  ai_assistant.py  app.py  audio_recorder.py  config.py  meeting_recorder.py  pyproject.toml  realtime_processor.py  requirements.txt  test_questions.py  transcription.py
static/css/: style.css
static/js/: app.js  layout.js  live_mode.js
templates/: index.html
